--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,7 @@
 rootProject.name = 'Tema_Lab_1'
+include 'ConcursServer'
+include 'MainModule'
+include 'ConcursServices'
+include 'ConcursModel'
+include 'ConcursNetworking'
 
