--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'ConcursServices'
 include 'ConcursModel'
 include 'ConcursNetworking'
 include 'ConcursPersistance'
+include 'ConcursClient'
 
