--- a/ConcursServer/src/main/resources/concursserver.properties
+++ b/ConcursServer/src/main/resources/concursserver.properties
@@ -1,4 +1,4 @@
 concurs.server.port=55556
 
 concurs.jdbc.driver=org.mysql.JDBC
-concurs.jdbc.url=jdbc:mysql:Lab2.db
+concurs.jdbc.url=jdbc:mysql://localhost:3306/lab2
